@@ -321,6 +321,10 @@ Author: Rafael Ferreira Silva <rafael@webphp.com.br>
         'Mandatory if you use SMTP as Backend and SMTP authentication is enabled' => 'Mandatory if you use \'SMTP\' as Backend and \'SMTP authentication\' is enabled',
         'If users have cookies disabled, this will allow them to use sessions with Seagull' => 'If users have cookies disabled, this will allow them to use sessions with Seagull',
         'Allow Session in URL' => 'Allow Session in URL',
+        'Check for Latest Version' => 'Check for Latest Version',
+        'Check Now' => 'Check Now',
+        'Your current version is up to date' => 'Your current version is up to date',
+        'remote interface problem' => 'There was a problem querying the remote interface',
     );
 
 $defaultWords['Maintenance'] = 'Maintenance';
